// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InputComponent snapshots should match snapshot - Default input, empty value 1`] = `
<div>
  <span
    class="flex border-b border-gray-200 px-2 py-2 gap-2 items-center px-4 py-2"
  >
    <svg
      color="gray"
      fill="currentColor"
      height="25"
      id="search"
      stroke="currentColor"
      stroke-width="0"
      style="color: gray;"
      version="1.1"
      viewBox="0 0 24 24"
      width="25"
      x="0px"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <g>
        <path
          d="M20.031,20.79c0.46,0.46,1.17-0.25,0.71-0.7l-3.75-3.76c1.27-1.41,2.04-3.27,2.04-5.31
		c0-4.39-3.57-7.96-7.96-7.96s-7.96,3.57-7.96,7.96c0,4.39,3.57,7.96,7.96,7.96c1.98,0,3.81-0.73,5.21-1.94L20.031,20.79z
		 M4.11,11.02c0-3.84,3.13-6.96,6.96-6.96c3.84,0,6.96,3.12,6.96,6.96c0,3.84-3.12,6.96-6.96,6.96C7.24,17.98,4.11,14.86,4.11,11.02
		z"
        />
      </g>
    </svg>
    <input
      class="outline-0 w-full"
      value=""
    />
  </span>
</div>
`;

exports[`InputComponent snapshots should match snapshot - Input with icon disabled 1`] = `
<div>
  <span
    class="flex border-b border-gray-200 px-2 py-2 gap-2 items-center px-4 py-2"
  >
    <input
      class="outline-0 w-full"
      value=""
    />
  </span>
</div>
`;

exports[`InputComponent snapshots should match snapshot - Input with reset icon 1`] = `
<div>
  <span
    class="flex border-b border-gray-200 px-2 py-2 gap-2 items-center px-4 py-2"
  >
    <svg
      color="gray"
      fill="currentColor"
      height="25"
      id="search"
      stroke="currentColor"
      stroke-width="0"
      style="color: gray;"
      version="1.1"
      viewBox="0 0 24 24"
      width="25"
      x="0px"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <g>
        <path
          d="M20.031,20.79c0.46,0.46,1.17-0.25,0.71-0.7l-3.75-3.76c1.27-1.41,2.04-3.27,2.04-5.31
		c0-4.39-3.57-7.96-7.96-7.96s-7.96,3.57-7.96,7.96c0,4.39,3.57,7.96,7.96,7.96c1.98,0,3.81-0.73,5.21-1.94L20.031,20.79z
		 M4.11,11.02c0-3.84,3.13-6.96,6.96-6.96c3.84,0,6.96,3.12,6.96,6.96c0,3.84-3.12,6.96-6.96,6.96C7.24,17.98,4.11,14.86,4.11,11.02
		z"
        />
      </g>
    </svg>
    <input
      class="outline-0 w-full"
      value="Test"
    />
    <svg
      color="gray"
      fill="currentColor"
      height="25"
      stroke="currentColor"
      stroke-width="0"
      style="color: gray;"
      viewBox="0 0 512 512"
      width="25"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48zm52.7 283.3L256 278.6l-52.7 52.7c-6.2 6.2-16.4 6.2-22.6 0-3.1-3.1-4.7-7.2-4.7-11.3 0-4.1 1.6-8.2 4.7-11.3l52.7-52.7-52.7-52.7c-3.1-3.1-4.7-7.2-4.7-11.3 0-4.1 1.6-8.2 4.7-11.3 6.2-6.2 16.4-6.2 22.6 0l52.7 52.7 52.7-52.7c6.2-6.2 16.4-6.2 22.6 0 6.2 6.2 6.2 16.4 0 22.6L278.6 256l52.7 52.7c6.2 6.2 6.2 16.4 0 22.6-6.2 6.3-16.4 6.3-22.6 0z"
      />
    </svg>
  </span>
</div>
`;

exports[`InputComponent snapshots should match snapshot - Input with text value 1`] = `
<div>
  <span
    class="flex border-b border-gray-200 px-2 py-2 gap-2 items-center px-4 py-2"
  >
    <svg
      color="gray"
      fill="currentColor"
      height="25"
      id="search"
      stroke="currentColor"
      stroke-width="0"
      style="color: gray;"
      version="1.1"
      viewBox="0 0 24 24"
      width="25"
      x="0px"
      xmlns="http://www.w3.org/2000/svg"
      y="0px"
    >
      <g>
        <path
          d="M20.031,20.79c0.46,0.46,1.17-0.25,0.71-0.7l-3.75-3.76c1.27-1.41,2.04-3.27,2.04-5.31
		c0-4.39-3.57-7.96-7.96-7.96s-7.96,3.57-7.96,7.96c0,4.39,3.57,7.96,7.96,7.96c1.98,0,3.81-0.73,5.21-1.94L20.031,20.79z
		 M4.11,11.02c0-3.84,3.13-6.96,6.96-6.96c3.84,0,6.96,3.12,6.96,6.96c0,3.84-3.12,6.96-6.96,6.96C7.24,17.98,4.11,14.86,4.11,11.02
		z"
        />
      </g>
    </svg>
    <input
      class="outline-0 w-full"
      value="Hello"
    />
    <svg
      color="gray"
      fill="currentColor"
      height="25"
      stroke="currentColor"
      stroke-width="0"
      style="color: gray;"
      viewBox="0 0 512 512"
      width="25"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 48C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48zm52.7 283.3L256 278.6l-52.7 52.7c-6.2 6.2-16.4 6.2-22.6 0-3.1-3.1-4.7-7.2-4.7-11.3 0-4.1 1.6-8.2 4.7-11.3l52.7-52.7-52.7-52.7c-3.1-3.1-4.7-7.2-4.7-11.3 0-4.1 1.6-8.2 4.7-11.3 6.2-6.2 16.4-6.2 22.6 0l52.7 52.7 52.7-52.7c6.2-6.2 16.4-6.2 22.6 0 6.2 6.2 6.2 16.4 0 22.6L278.6 256l52.7 52.7c6.2 6.2 6.2 16.4 0 22.6-6.2 6.3-16.4 6.3-22.6 0z"
      />
    </svg>
  </span>
</div>
`;
